--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="style.css" />
 <meta charset="UTF-8">
 <title> Tutoriales de Git </title>
 </head>
 <body>
-<header></header>
-</body>
+<header>
+</header>
+<main></main>
 <footer></footer>
+</body>
 </html>
