Añadido Footer + imagenes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-<link rel="stylesheet" href="style.css" />
-<meta charset="UTF-8">
-<title> Tutoriales de Git </title>
-</head>
-<body>
-<header>
-</header>
-<main></main>
-<footer></footer>
-</body>
+
+	<head>
+		<link rel="stylesheet" href="style.css" />
+		<meta charset="UTF-8">
+		<title> Tutoriales de Git </title>
+	</head>
+	
+	<body>
+	
+		<header>
+		
+		</header>
+		
+		<main>
+		
+		</main>
+		
+		<footer>
+			<div>
+				<p id="copyright">&#169; IES Son Ferrer 2017.</p>
+				<img id="responsiveIcon"src="imagenes/responsive.png" />
+			</div>
+		</footer>
+		
+	</body>
+	
 </html>
