--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,28 +3,84 @@
 <html>
 
 	<head>
+		<!-- favicon -->		
+		<link rel="shortcut icon" href="imagenes/favicon.ico" /> 
+		
+		<!-- METAs -->
+		<meta name="title" content="Tutoriales GitHub"/>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta name="keywords" content="Tutoriales GitHub.">
+		<meta name="description" content="Tutoriales GitHub.">
+		<meta name="author" content="Miquel Costa"/>
+		<meta name="owner" content="Miquel Costa"/>
+		<meta name='copyright' content='Copyright IES Son Ferrer 2017' />
+		<meta name="language" content="ES"/>
+		<meta name='distribution' content='global'/>
+		<meta name="rating" content="general"/>
+		<meta name="robot" content="index, follow"/>
+		<meta http-equiv="cache-control" content="no-cache">
+		<meta http-equiv="pragma" content="no-cache">
+		<meta http-equiv="expires" content="-1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5" />
+		
+		<!--  CSS  -->
 		<link rel="stylesheet" href="style.css" />
-		<meta charset="UTF-8">
+		
 		<title> Tutoriales de Git </title>
 	</head>
 	
 	<body>
-	
-		<header>
-		
-		</header>
-		
-		<main>
-		
-		</main>
-		
-		<footer>
-			<div>
-				<p id="copyright">&#169; IES Son Ferrer 2017.</p>
-				<img id="responsiveIcon"src="imagenes/responsive.png" />
-			</div>
-		</footer>
-		
+		<div id="wrapper">
+			<header>
+				<div id="cssmenu">
+				  <ul>
+					 <li class="active"><a href="index.html">GitHub</a></li>
+					  <li class="has-sub"><a href="#">Git Básico</a>
+						<ul>
+							 <li><a href="#">Opción 1</a></li>
+							 <li><a href="#">Opción 2</a></li>
+							 <li><a href="#">Opción 3</a></li>
+							 <li><a href="#">Opción 4</a></li>
+							 <li><a href="#">Opción 5</a></li>
+							 <li><a href="#">Opción 6</a></li>
+						</ul>
+					 </li>
+					  <li class="has-sub"><a href="#">Git Avanzado</a>
+						<ul>
+							 <li><a href="#">Opción 1</a></li>
+							 <li><a href="#">Opción 2</a></li>
+							 <li><a href="#">Opción 3</a></li>
+							 <li><a href="#">Opción 4</a></li>
+							 <li><a href="#">Opción 5</a></li>
+							 <li><a href="#">Opción 6</a></li>
+						</ul>
+					 </li>
+					 <li class="has-sub"><a href="#">Git Tutoriales</a>
+						<ul>
+							 <li><a href="#">Opción 1</a></li>
+							 <li><a href="#">Opción 2</a></li>
+							 <li><a href="#">Opción 3</a></li>
+							 <li><a href="#">Opción 4</a></li>
+							 <li><a href="#">Opción 5</a></li>
+							 <li><a href="#">Opción 6</a></li>
+						</ul>
+					 </li>
+				  </ul>
+				</div>
+			
+			</header>
+			
+			<main>
+			
+			</main>
+			
+			<footer>
+				<p id="autor1">Miquel Costa<br/>
+				Visita: <a id="IesSonFerrer" href="http://www.iessonferrer.net"> IES Son Ferrer </a><br/>
+				Todos los derechos reservados 2017 &copy </p> 
+				<a href="http://es.wikipedia.org/wiki/Dise%C3%B1o_web_adaptable"><img id="responsiveIcon" title="HTML5, CSS3, JavaScript, Responsive" alt="HTML5, CSS3, JavaScript, Responsive" src="imagenes/responsive.png" /></a>
+			</footer>
+		</div>
 	</body>
 	
 </html>
