--- a/WebContent/advanced.html
+++ b/WebContent/advanced.html
@@ -34,7 +34,7 @@
 			<header>
 				<div id="cssmenu">
 				  <ul>
-					 <li class="active"><a>GitHub</a></li>
+					 <li class="active"><a href="index.html">GitHub</a></li>
 					  <li class="has-sub"><a href="basic.html">Git Básico</a>
 						<ul>
 							 <li><a href="#">Opción 1</a></li>
@@ -45,7 +45,7 @@
 							 <li><a href="#">Opción 6</a></li>
 						</ul>
 					 </li>
-					  <li class="has-sub"><a href="advanced.html">Git Avanzado</a>
+					  <li class="has-sub"><a>Git Avanzado</a>
 						<ul>
 							 <li><a href="#">Opción 1</a></li>
 							 <li><a href="#">Opción 2</a></li>
