--- a/WebContent/basic.html
+++ b/WebContent/basic.html
@@ -34,8 +34,8 @@
 			<header>
 				<div id="cssmenu">
 				  <ul>
-					 <li class="active"><a>GitHub</a></li>
-					  <li class="has-sub"><a href="basic.html">Git Básico</a>
+					 <li class="active"><a href="index.html">GitHub</a></li>
+					  <li class="has-sub"><a>Git Básico</a>
 						<ul>
 							 <li><a href="#">Opción 1</a></li>
 							 <li><a href="#">Opción 2</a></li>
