--- a/WebContent/tutorials.html
+++ b/WebContent/tutorials.html
@@ -26,7 +26,7 @@
 		<!--  CSS  -->
 		<link rel="stylesheet" href="style.css" />
 		
-		<title> Tutoriales de Git </title>
+		<title>Tutoriales de Git</title>
 	</head>
 	
 	<body>
@@ -34,7 +34,7 @@
 			<header>
 				<div id="cssmenu">
 				  <ul>
-					 <li class="active"><a>GitHub</a></li>
+					 <li class="active"><a href="index.html">GitHub</a></li>
 					  <li class="has-sub"><a href="basic.html">Git Básico</a>
 						<ul>
 							 <li><a href="#">Opción 1</a></li>
@@ -55,7 +55,7 @@
 							 <li><a href="#">Opción 6</a></li>
 						</ul>
 					 </li>
-					 <li class="has-sub"><a href="tutorials.html">Git Tutoriales</a>
+					 <li class="has-sub"><a>Git Tutoriales</a>
 						<ul>
 							 <li><a href="#">Opción 1</a></li>
 							 <li><a href="#">Opción 2</a></li>
