--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,32 +37,32 @@
 					 <li class="active"><a>GitHub</a></li>
 					  <li class="has-sub"><a href="basic.html">Git Básico</a>
 						<ul>
-							 <li><a href="#">Opción 1</a></li>
-							 <li><a href="#">Opción 2</a></li>
-							 <li><a href="#">Opción 3</a></li>
-							 <li><a href="#">Opción 4</a></li>
-							 <li><a href="#">Opción 5</a></li>
-							 <li><a href="#">Opción 6</a></li>
+							 <li><a href="basic.html#">Opción 1</a></li>
+							 <li><a href="basic.html#">Opción 2</a></li>
+							 <li><a href="basic.html#">Opción 3</a></li>
+							 <li><a href="basic.html#">Opción 4</a></li>
+							 <li><a href="basic.html#">Opción 5</a></li>
+							 <li><a href="basic.html#">Opción 6</a></li>
 						</ul>
 					 </li>
 					  <li class="has-sub"><a href="advanced.html">Git Avanzado</a>
 						<ul>
-							 <li><a href="#">Opción 1</a></li>
-							 <li><a href="#">Opción 2</a></li>
-							 <li><a href="#">Opción 3</a></li>
-							 <li><a href="#">Opción 4</a></li>
-							 <li><a href="#">Opción 5</a></li>
-							 <li><a href="#">Opción 6</a></li>
+							 <li><a href="advanced.html#">Opción 1</a></li>
+							 <li><a href="advanced.html#">Opción 2</a></li>
+							 <li><a href="advanced.html#">Opción 3</a></li>
+							 <li><a href="advanced.html#">Opción 4</a></li>
+							 <li><a href="advanced.html#">Opción 5</a></li>
+							 <li><a href="advanced.html#">Opción 6</a></li>
 						</ul>
 					 </li>
 					 <li class="has-sub"><a href="tutorials.html">Git Tutoriales</a>
 						<ul>
-							 <li><a href="#">Opción 1</a></li>
-							 <li><a href="#">Opción 2</a></li>
-							 <li><a href="#">Opción 3</a></li>
-							 <li><a href="#">Opción 4</a></li>
-							 <li><a href="#">Opción 5</a></li>
-							 <li><a href="#">Opción 6</a></li>
+							 <li><a href="tutorials.html#">Opción 1</a></li>
+							 <li><a href="tutorials.html#">Opción 2</a></li>
+							 <li><a href="tutorials.html#">Opción 3</a></li>
+							 <li><a href="tutorials.html#">Opción 4</a></li>
+							 <li><a href="tutorials.html#">Opción 5</a></li>
+							 <li><a href="tutorials.html#">Opción 6</a></li>
 						</ul>
 					 </li>
 				  </ul>
