--- a/WebContent/advanced.html
+++ b/WebContent/advanced.html
@@ -23,8 +23,10 @@
 		<meta http-equiv="expires" content="-1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5" />
 		
-		<!--  CSS  -->
+		<!--  CSS / JS / JQ -->
 		<link rel="stylesheet" href="style.css" />
+		<script src="jquery-latest.js"></script>
+		<script src="Script.js"></script>
 		
 		<title> Tutoriales de Git </title>
 	</head>
@@ -32,7 +34,7 @@
 	<body>
 		<div id="wrapper">
 			<header>
-				<div id="cssmenu">
+				<div class="cssmenu">
 				  <ul>
 					 <li><a href="index.html">GitHub</a></li>
 					  <li class="has-sub"><a href="basic.html">Git Básico</a>
@@ -69,7 +71,7 @@
 				</div>
 			
 			</header>
-			
+			<div id="github"><a href="https://github.com">Ir a GitHub</a></div>
 			<main>
 			
 			</main>
