--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,16 +23,18 @@
 		<meta http-equiv="expires" content="-1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5" />
 		
-		<!--  CSS  -->
+		<!--  CSS / JS / JQ -->
 		<link rel="stylesheet" href="style.css" />
+		<script src="jquery-latest.js"></script>
+		<script src="Script.js"></script>
 		
-		<title> Tutoriales de Git </title>
+		
+		<title>Tutoriales de GitHub</title>
 	</head>
-	
 	<body>
-		<div id="wrapper">
-			<header>
-				<div id="cssmenu">
+		<div id="wrapper"> 
+			<header id="cabeza">
+				<div class="cssmenu">
 				  <ul>
 					 <li class="active"><a>GitHub</a></li>
 					  <li class="has-sub"><a href="basic.html">Git Básico</a>
@@ -67,10 +69,23 @@
 					 </li>
 				  </ul>
 				</div>
-			
-			</header>
+				
+				<div id="github"><a href="https://github.com">Ir a GitHub</a></div>
+				
 			
 			<main>
+			<h2>¿Qué es GitHub?</h2>
+			<p>GitHub es una forja (plataforma de desarrollo colaborativo) para alojar proyectos utilizando el sistema de control de versiones Git. Utiliza el framework Ruby on Rails por GitHub, Inc. (anteriormente conocida como Logical Awesome). Desde enero de 2010, GitHub opera bajo el nombre de GitHub, Inc. El código se almacena de forma pública, aunque también se puede hacer de forma privada, creando una cuenta de pago.</p>
+			
+			<p>El desarrollo de la plataforma GitHub comenzó el 1 de octubre de 2007. El sitio fue lanzado en abril de 2008 por Tom Preston-Werner, Chris Wanstrath y PJ Hyett después de que se había puesto a disposición durante unos meses antes como una versión beta.</p>
+
+			<p>Los proyectos en GitHub se pueden acceder y manipular utilizando la interfaz de línea de comandos estándar de Git con el cual todos los comandos estándar de Git funcionan. GitHub también permite a los usuarios registrados y no registrados navegar por los repositorios públicos del sitio. Varios clientes de escritorio y complementos Git también han sido creados por GitHub y otros de terceros que se integran con la plataforma.</p>
+
+			<p>El sitio proporciona funciones de redes sociales como feeds, seguidores, wikis (usando el software wiki llamado Gollum) y un gráfico de redes sociales para mostrar cómo los desarrolladores trabajan en sus versiones ("bifurcaciones" o "forks" en Ingles) de un repositorio cuya función es más nueva.</p>
+
+			<p>Un usuario debe crear una cuenta para contribuir con el contenido del repositorio, pero los repositorios públicos pueden ser explorados y descargados por cualquiera. Con una cuenta de usuario registrada, los usuarios pueden discutir, administrar, crear repositorios y enviar contribuciones a los repositorios de otros y revisar los cambios en el código.</p>
+
+			<p>El software que ejecuta GitHub fue escrito usando Ruby on Rails y Erlang de GitHub, Inc. Desarrolladores Chris Wanstrath, PJ Hyett y Tom Preston-Werner.</p>
 			
 			</main>
 			
