--- a/WebContent/basic.html
+++ b/WebContent/basic.html
@@ -25,46 +25,57 @@
 		
 		<!--  CSS / JS / JQ -->
 		<link rel="stylesheet" href="style.css" />
-		<script src="jquery-latest.js"></script>
-		<script src="Script.js"></script>
+		<script src="js/jquery-latest.js"></script>
+		<script src="js/Script.js"></script>
 		
 		<title> Tutoriales de Git </title>
 	</head>
 	
 	<body>
 		<div id="wrapper">
-			<header>
+			<header id="cabeza">
 				<div class="cssmenu">
 				  <ul>
 					 <li><a href="index.html">GitHub</a></li>
-					  <li class="active" class="has-sub"><a>Git Básico</a>
+					  <li class="active" class="has-sub"><a>Conceptos</a>
 						<ul>
-							 <li><a href="basic.html#">Opción 1</a></li>
-							 <li><a href="basic.html#">Opción 2</a></li>
-							 <li><a href="basic.html#">Opción 3</a></li>
-							 <li><a href="basic.html#">Opción 4</a></li>
-							 <li><a href="basic.html#">Opción 5</a></li>
-							 <li><a href="basic.html#">Opción 6</a></li>
+							 <li><a href="basic.html#ginstala">Instala Git</a></li>
+							 <li><a href="basic.html#gconfigura">Configurar Git</a></li>
+							 <li><a href="basic.html#grepositorios">Repositorios</a></li>
+							 <li><a href="basic.html#gcommits">Commits</a></li>
+							 <li><a href="basic.html#gramas">Ramas</a></li>
+							 <li><a href="basic.html#gfork">Fork</a></li>
+							 <li><a href="basic.html#geclipseWeb">Eclipse / Web</a></li>
 						</ul>
 					 </li>
-					  <li class="has-sub"><a href="advanced.html">Git Avanzado</a>
+					  <li class="has-sub"><a href="advanced.html">Comandos</a>
 						<ul>
-							 <li><a href="advanced.html#">Opción 1</a></li>
-							 <li><a href="advanced.html#">Opción 2</a></li>
-							 <li><a href="advanced.html#">Opción 3</a></li>
-							 <li><a href="advanced.html#">Opción 4</a></li>
-							 <li><a href="advanced.html#">Opción 5</a></li>
-							 <li><a href="advanced.html#">Opción 6</a></li>
+							 <li><a href="advanced.html#ginit">Git init</a></li>
+							 <li><a href="advanced.html#gadd">Git add</a></li>
+							 <li><a href="advanced.html#gstatus">Git status</a></li>
+							 <li><a href="advanced.html#gcommit">Git commit</a></li>
+							 <li><a href="advanced.html#glog">Git log</a></li>
+							 <li><a href="advanced.html#gcheckout">Git checkout</a></li>
+							 <li><a href="advanced.html#gdiff">Git diff</a></li>
+							 <li><a href="advanced.html#greset">Git reset</a></li>
+							 <li><a href="advanced.html#gbranch">Git branch</a></li>
+							 <li><a href="advanced.html#gremote">Git remote</a></li>
+							 <li><a href="advanced.html#gpush">Git push</a></li>
+							 <li><a href="advanced.html#gpull">Git pull</a></li>
+							 <li><a href="advanced.html#gclone">Git clone</a></li>
+							 <li><a href="advanced.html#gfetch">Git fetch</a></li>
+							 <li><a href="advanced.html#gmerge">Git merge</a></li>
+							 <li><a href="advanced.html#gstash">Git stash</a></li>
+							 <li><a href="advanced.html#grebase">Git rebase</a></li>
+							 <li><a href="advanced.html#gtag">Git tag</a></li>
+							 <li><a href="advanced.html#grevert">Git revert</a></li>
 						</ul>
 					 </li>
-					 <li class="has-sub"><a href="tutorials.html">Git Tutoriales</a>
+					 <li class="has-sub"><a href="tutorials.html">Guías de Git en PDF</a>
 						<ul>
-							 <li><a href="tutorials.html#">Opción 1</a></li>
-							 <li><a href="tutorials.html#">Opción 2</a></li>
-							 <li><a href="tutorials.html#">Opción 3</a></li>
-							 <li><a href="tutorials.html#">Opción 4</a></li>
-							 <li><a href="tutorials.html#">Opción 5</a></li>
-							 <li><a href="tutorials.html#">Opción 6</a></li>
+							 <li><a href="tutorials.html#tgramas">Ramas</a></li>
+							 <li><a href="tutorials.html#tgrevertreset">Revert vs Reset</a></li>
+							 <li><a href="tutorials.html#tgeclipse">Eclipse</a></li>
 						</ul>
 					 </li>
 				  </ul>
@@ -72,14 +83,43 @@
 			
 			</header>
 			<div id="github"><a href="https://github.com">Ir a GitHub</a></div>
-			<main>
 			
+			<main>
+				<article>
+					<h2>Articulo 1</h2>
+					<p>Descripción 1</p>
+				</article>
+				<article>
+					<h2>Articulo 1</h2>
+					<p>Descripción 1</p>
+				</article>
+				<article>
+					<h2>Articulo 1</h2>
+					<p>Descripción 1</p>
+				</article>
+				<article>
+					<h2>Articulo 1</h2>
+					<p>Descripción 1</p>
+				</article>
+				<article>
+					<h2>Articulo 1</h2>
+					<p>Descripción 1</p>
+				</article>
+				<article>
+					<h2>Articulo 1</h2>
+					<p>Descripción 1</p>
+				</article>
+				<article>
+					<h2>Articulo 1</h2>
+					<p>Descripción 1</p>
+				</article>
 			</main>
 			
 			<footer>
 				<p id="autor1">Miquel Costa<br/>
 				Visita: <a id="IesSonFerrer" href="http://www.iessonferrer.net"> IES Son Ferrer </a><br/>
-				Todos los derechos reservados 2017 &copy </p> 
+				Todos lo estudiado en clase resumido 2017 &copy <br/>
+				Practica de Entorno y Desarrollo junto a Lenguaje de Marcas.</p> 
 				<a href="http://es.wikipedia.org/wiki/Dise%C3%B1o_web_adaptable"><img id="responsiveIcon" title="HTML5, CSS3, JavaScript, Responsive" alt="HTML5, CSS3, JavaScript, Responsive" src="imagenes/responsive.png" /></a>
 			</footer>
 		</div>
