--- a/WebContent/tutorials.html
+++ b/WebContent/tutorials.html
@@ -101,8 +101,8 @@
 			<footer>
 				<p id="autor1">Miquel Costa<br/>
 				Visita: <a id="IesSonFerrer" href="http://www.iessonferrer.net"> IES Son Ferrer </a><br/>
-				Todos lo estudiado en clase resumido 2017 &copy <br/>
-				Practica de Entorno y Desarrollo junto a Lenguaje de Marcas.</p> 
+				Todo lo estudiado en clase resumido 2017<br/>
+				Practica de Entorno y Desarrollo junto a Lenguaje de Marcas. (<a href="https://git-scm.com/book/es/v1">Guía Oficial</a>)</p> 
 				<a href="http://es.wikipedia.org/wiki/Dise%C3%B1o_web_adaptable"><img id="responsiveIcon" title="HTML5, CSS3, JavaScript, Responsive" alt="HTML5, CSS3, JavaScript, Responsive" src="imagenes/responsive.png" /></a>
 			</footer>
 		</div>
