--- a/WebContent/basic.html
+++ b/WebContent/basic.html
@@ -33,10 +33,58 @@
 	
 	<body>
 		<div id="wrapper">
+		<img onclick="desp()" class="burger" src="imagenes/menuresp.png"/>
 			<header id="cabeza">
 				<div class="cssmenu">
 				  <ul>
 					 <li><a href="index.html">GitHub</a></li>
+					  <li class="active" class="has-sub"><a>Conceptos</a>
+						<ul>
+							 <li><a href="basic.html#ginstala">Instala Git</a></li>
+							 <li><a href="basic.html#gconfigura">Configurar Git</a></li>
+							 <li><a href="basic.html#grepositorios">Repositorios</a></li>
+							 <li><a href="basic.html#gcommits">Commits</a></li>
+							 <li><a href="basic.html#gramas">Ramas</a></li>
+							 <li><a href="basic.html#gfork">Fork</a></li>
+							 <li><a href="basic.html#geclipseWeb">Eclipse / Web</a></li>
+						</ul>
+					 </li>
+					  <li class="has-sub"><a href="advanced.html">Comandos</a>
+						<ul>
+							 <li><a href="advanced.html#ginit">Git init</a></li>
+							 <li><a href="advanced.html#gadd">Git add</a></li>
+							 <li><a href="advanced.html#gstatus">Git status</a></li>
+							 <li><a href="advanced.html#gcommit">Git commit</a></li>
+							 <li><a href="advanced.html#glog">Git log</a></li>
+							 <li><a href="advanced.html#gcheckout">Git checkout</a></li>
+							 <li><a href="advanced.html#gdiff">Git diff</a></li>
+							 <li><a href="advanced.html#greset">Git reset</a></li>
+							 <li><a href="advanced.html#gbranch">Git branch</a></li>
+							 <li><a href="advanced.html#gremote">Git remote</a></li>
+							 <li><a href="advanced.html#gpush">Git push</a></li>
+							 <li><a href="advanced.html#gpull">Git pull</a></li>
+							 <li><a href="advanced.html#gclone">Git clone</a></li>
+							 <li><a href="advanced.html#gfetch">Git fetch</a></li>
+							 <li><a href="advanced.html#gmerge">Git merge</a></li>
+							 <li><a href="advanced.html#gstash">Git stash</a></li>
+							 <li><a href="advanced.html#grebase">Git rebase</a></li>
+							 <li><a href="advanced.html#gtag">Git tag</a></li>
+							 <li><a href="advanced.html#grevert">Git revert</a></li>
+						</ul>
+					 </li>
+					 <li class="has-sub"><a href="tutorials.html">Guías de Git en PDF</a>
+						<ul>
+							 <li><a href="tutorials.html#tgramas">Ramas</a></li>
+							 <li><a href="tutorials.html#tgrevertreset">Revert vs Reset</a></li>
+							 <li><a href="tutorials.html#tgeclipse">Eclipse</a></li>
+						</ul>
+					 </li>
+				  </ul>
+				</div>
+
+				<div class="cssmenuresponsive">
+				  <ul>
+					 <li ><a href="index.html">GitHub</a></li>
 					  <li class="active" class="has-sub"><a>Conceptos</a>
 						<ul>
 							 <li><a href="basic.html#ginstala">Instala Git</a></li>
